2007-07-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/Makefile.in: Bump library version for 2.1.1
	release.

2007-07-05  Chris Morley

	* src/formats/inchiformat(WriteMolecule): downgraded the InChI
	message "Tetrahedral stereo info not available" to obInfo, 
	since it arises from the workings of the the opaque OB chirality
	system. Also added the molecule number for identification.
	
	* src/GUI/OBGUI.cpp, tool/babel.cpp: added &std::cout to the
	call to OBConversion::Write() for the APIInterface, because the
	previous NULL value was causing it to be ignored. This meant
	that ---errorlevel wasn't working,  as again found by Noel.
	
2007-07-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mdlformat.cpp (MDLFormat::ReadMolecule): Add
	additional error and warning messages, including a check if the
	atom/bond block doesn't work. Fixes crash reported by Joe Bedell,
	Sigma-Aldrich.

	* Makefile.am, Makefile.in: Skip INSTALL.Windows, deleted by
	Chris.

2007-07-04  Chris Morley

	* src/finger3.cpp: Trim firts line which decided format of
	patterns.txt. In Windows there was trailing \r which caused
	none of the patterns to be read, as found by Noel.
	
2007-07-04  Chris Morley

	* src/formats/smilesformat.cpp(CreateSmiString): call
	FindClosureBonds even when all atoms are chiral.
	(GetSmilesElement): only call GetChiralStereo when
	atom has is specified clockwise or anticlockwise, not just chiral.
	
2007-07-02  Noel O'Boyle <baoilleach@gmail.com>

	* include/oberrors.h: Fixed typo in Doxygen

2007-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, */Makefile.in: Updated with patch from
	Jean Brefort. Adds new --with-pkglibdir flag to facilitate
	packaging with versioned format directories.

2007-07-01  Chris Morley

	* src/obconversion.cpp(InstallStreamFilter): test for non-zero
	pInFormat to avoid crash with no input.
	
	* src/formats/gamessformat.cpp: Test for "$END" now works on $END$.